# runfiles_api

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  renovate.json  runfiles_api_test.bzl  runfiles_api_test.py
.github/: dependabot.yml
.github/actions/test-bazel-target/: action.yaml
.github/workflows/: ci.yaml  compile-requirements.yaml  format.yaml  test-cc.yaml  test-go.yaml  test-java.yaml  test-python.yaml  test-rust.yaml  test-shell.yaml
test/cc/: BUILD.bazel  runfiles_user.cc
test/go/: BUILD.bazel  runfiles_user.go
test/java/: BUILD.bazel  RunfilesUser.java
test/python/: BUILD.bazel  runfiles_user_entrypoint.py
test/rust/: BUILD.bazel  runfiles_user.rs
test/shell/: BUILD.bazel  runfiles_user_entrypoint.sh
tools/: BUILD.bazel
tools/requirements/: requirements.in  requirements_linux_x86_64.txt  requirements_macos_aarch64.txt  requirements_windows_x86_64.txt
tools/src_merger/: BUILD.bazel  src_merger.bzl  src_merger.py
tools/toolchains/: BUILD.bazel
