"""runfiles_api"""

module(
    name = "runfiles_api",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.10")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_req_compile", version = "1.0.0rc38")
bazel_dep(name = "rules_rust", version = "0.66.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_venv", version = "0.6.0")

requirements = use_extension("@rules_req_compile//extensions:python.bzl", "requirements")
requirements.parse(
    name = "pip_deps",
    requirements_locks = {
        "//tools/requirements:requirements_linux_x86_64.txt": "@@//tools/requirements:linux_x86_64",
        "//tools/requirements:requirements_macos_aarch64.txt": "@@//tools/requirements:macos_aarch64",
        "//tools/requirements:requirements_windows_x86_64.txt": "@@//tools/requirements:windows_x86_64",
    },
)
use_repo(requirements, "pip_deps")

register_toolchains(
    "//tools/toolchains:py_black_toolchain",
    "//tools/toolchains:py_isort_toolchain",
    "//tools/toolchains:py_mypy_toolchain",
    "//tools/toolchains:py_pylint_toolchain",
    "//tools/toolchains:py_pytest_toolchain",
)
