load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//:runfiles_api_test.bzl", "runfiles_api_test")

cc_binary(
    name = "runfiles_user",
    testonly = True,
    srcs = ["runfiles_user.cc"],
    deps = ["@rules_cc//cc/runfiles"],
)

runfiles_api_test(
    name = "test_runfiles",
    binary = ":runfiles_user",
)
