load("@rules_go//go:def.bzl", "go_binary")
load("//:runfiles_api_test.bzl", "runfiles_api_test")

go_binary(
    name = "runfiles_user",
    testonly = True,
    srcs = ["runfiles_user.go"],
    deps = ["@rules_go//go/runfiles"],
)

runfiles_api_test(
    name = "test_runfiles",
    binary = ":runfiles_user",
)
