load("@rules_java//java:java_binary.bzl", "java_binary")
load("//:runfiles_api_test.bzl", "runfiles_api_test")

java_binary(
    name = "runfiles_user",
    testonly = True,
    srcs = ["RunfilesUser.java"],
    main_class = "com.runfiles_api.test.RunfilesUser",
    deps = ["@rules_java//java/runfiles"],
)

runfiles_api_test(
    name = "test_runfiles",
    binary = ":runfiles_user",
)
