load("@rules_rust//rust:rust_binary.bzl", "rust_binary")
load("//:runfiles_api_test.bzl", "runfiles_api_test")

rust_binary(
    name = "runfiles_user",
    testonly = True,
    srcs = ["runfiles_user.rs"],
    edition = "2021",
    deps = ["@rules_rust//rust/runfiles"],
)

runfiles_api_test(
    name = "test_runfiles",
    binary = ":runfiles_user",
)
